# rcedit-rs

./: Cargo.toml  README.md
mock_resources_binary/: CMakeLists.txt  main.c  resource.h  resource.rc
rcedit-sys/: Cargo.toml  build.rs
rcedit-sys/src/: lib.rs  librcedit.cpp  rescle.cc  rescle.h
src/: lib.rs
tests/: patching.rs
