[package]
name = "rcedit"
version = "0.1.0"
authors = ["Vladislav Nikonov <nikonov.vladislav@apriorit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcedit-sys = { path = "rcedit-sys" }
thiserror = "1.0"
widestring = "0.4"

[dev-dependencies]
tempfile = "3.1"